@startuml

title __WEBVIEW's Class Diagram__\n

  namespace com.aaron.base {
    namespace webview {
      abstract class com.aaron.base.webview.AbstractBrowserActivity {
          {static} + DEFAULT : int
          {static} + SONIC : int
          # mWebView : WebView
          - mSonicSession : SonicSession
          + onBackPressed()
          {abstract} # init()
          {abstract} # jsInterface()
          {abstract} # layoutId()
          {abstract} # mode()
          # onCreate()
          # onDestroy()
          {abstract} # url()
          {abstract} # webChromeClient()
          {abstract} # webViewClient()
          {abstract} # webViewId()
          - initView()
          - initWebView()
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      interface com.aaron.base.webview.AbstractBrowserActivity.Mode {
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      class com.aaron.base.webview.SonicJavaScriptInterface {
          {static} + PARAM_CLICK_TIME : String
          {static} + PARAM_LOAD_URL_TIME : String
          - intent : Intent
          + SonicJavaScriptInterface()
          + getDiffData()
          + getDiffData2()
          + getPerformance()
          {static} - toJsString()
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      class com.aaron.base.webview.SonicRuntimeImpl {
          + SonicRuntimeImpl()
          + createWebResourceResponse()
          + getCookie()
          + getCurrentUserAccount()
          + getHostDirectAddress()
          + getSonicCacheDir()
          + getUserAgent()
          + isNetworkValid()
          + isSonicUrl()
          + log()
          + notifyError()
          + postTaskToThread()
          + setCookie()
          + showToast()
      }
    }
  }
  

  namespace com.aaron.base {
    namespace webview {
      class com.aaron.base.webview.SonicSessionClientImpl {
          - webView : WebView
          + bindWebView()
          + getWebView()
          + loadDataWithBaseUrl()
          + loadDataWithBaseUrlAndHeader()
          + loadUrl()
      }
    }
  }
  

  com.aaron.base.webview.AbstractBrowserActivity -up-|> com.aaron.base.base.BaseActivity
  com.aaron.base.webview.AbstractBrowserActivity +-down- com.aaron.base.webview.AbstractBrowserActivity.Mode
  com.aaron.base.webview.SonicJavaScriptInterface o-- com.aaron.base.webview.SonicSessionClientImpl : sessionClient
  com.aaron.base.webview.SonicRuntimeImpl -up-|> com.tencent.sonic.sdk.SonicRuntime
  com.aaron.base.webview.SonicSessionClientImpl -up-|> com.tencent.sonic.sdk.SonicSessionClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
